load("//tools:bazel/swc.bzl", "swc_pkg")
load("//tools:common_ts_project.bzl", "common_ts_project")

common_ts_project(
    name = "repositories",
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg,
    tsconfig = "//:tsconfig_pkg",
    visibility = [
        "//src:entrypoint",
        "//src:infrastructure_presentation",
        "//src:infrastructure_repositories",
        "//src:infrastructure_services",
        "//src:presentation",
    ],
    deps = [
        "//src/common/options",
    ],
)
