load("//tools:bazel/swc.bzl", "swc_pkg")
load("//tools:common_ts_project.bzl", "common_ts_project")

common_ts_project(
    name = "scripts",
    allow_js = True,
    declaration = True,
    source_map = True,
    transpiler = swc_pkg,
    tsconfig = "//:tsconfig_pkg",
    visibility = [
        "//src:infrastructure_presentation",
        "//src:presentation",
    ],
    deps = [
        "//src/common/architecture/scripts",
    ],
)
